# realEstate

./: .env  .gitignore  README.md  bun.lockb  deployment.md  deployment.yaml  docker-compose.yml  index.ts  package.json
agent/: Dockerfile  README.md  app_streamlit.py  db.py  deployment.md  pyproject.toml  rag_generate.py  rag_retrieval.py  rec_core.py  similar_vector.py  vectorIndex.json  vertex_guard.py  vertex_nlu.py
agent/embed/: embed_batch.py  search_text.py
embed/: Dockerfile  README.md  deployment.md  pyproject.toml
lib/: number.ts  scrape.ts
mongoDB/: docker-compose.yaml  mongo-init.js
normalize/: main.py  pyproject.toml
result/: data.json
scraper/: .env  README.md  bun.lockb  index.ts  package.json
scraper/cron/: crawler.ts
scraper/docker/: Dockerfile  Dockerfile(WIP)
scraper/lib/: client.ts  details.ts  itemInfo.ts  logger.ts  normalize.ts  number.ts  scrape.ts
scraper/result/: data.json
