[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "google-cloud-aiplatform>=1.122.0",
    "pandas>=2.3.3",
    "pymongo>=4.15.3",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "vertexai>=1.43.0",
]
